[package]
name = "dioxus-editor"
authors = ["Alexander Kaminski"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus" }

# Note - tokio feature only required due to problems with doc generation
# See: https://github.com/kotauskas/interprocess/issues/32
interprocess = { version = "1.2.1", features = ["tokio", "tokio_support"] }
keyboard-types = "0.6.2"
